feat: add swagger annotations for prober domain
